# seeed-xiao-agora-client

./: README.md  README_cn.md
ai_agents/agents/examples/voice-assistant/tenapp/: property.json
ai_agents/esp32-client/: README.cn.md  README.md
ai_agents/esp32-client/main/: CMakeLists.txt  ai_agent.c  aic3104_ng.c  aic3104_ng.h  app_config.h  audio_proc.c  idf_component.yml  llm_main.c  video_proc.c  xvf3800.c  xvf3800.h
